force-app/main/default/objects/SD_Security_Level__c.object
<CustomObject>
    <fields>
        <fullName>Color_Symbol__c</fullName>
        <label>Color Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Level__c</fullName>
        <label>Security Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Security Level</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>